--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     overflow: hidden;
     width: 400px;
     max-width: 100%;
-    
+    box-shadow: 0 0 5px rgba(0,0,0,1);
 }
 
 .quizHeader {
