--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     /* min-height: 100vh; */
+    box-sizing: content-box;
 }
 
 main {
@@ -70,15 +71,20 @@ h2, h3 {
 }
 
 header {
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 20px;
     background-color: #f39c12;
     padding: 1rem;
     display: flex;
 }
 
+#title {
+    font-size: 30px;
+    font-weight: bold;
+}
+
 header > * {
     margin: 0 20px;
+    /* padding: 10px; */
 }
 
 footer {
@@ -96,11 +102,25 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+button:hover, a:hover {
     background-color: rgba(0,0,0,0.3);
+}
+
+a, a:visited {
+    background: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
 }
 
 img {
     width: 50px;
     border-radius: 25px;
+}
+
+#imgLink:hover {
+    background-color: rgba(0,0,0,0);
 }
