--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 main {
     min-height: 100vh;
-    /* display: flex; */
+    /* display: block; */
     align-items: center;
     justify-content: center;
 }
@@ -123,4 +123,19 @@ img {
 
 #imgLink:hover {
     background-color: rgba(0,0,0,0);
+}
+
+.category {
+    background-color: chartreuse;
+    width: 100%;
+    height: 70px;
+    margin: 20px 0;
+    padding-left: 30px;
+    text-align: left;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 50px;
+}
+
+.catContainer {
+    margin: 20px;
 }
