--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ img {
     text-align: left;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 50px;
+    color: white;
 }
 
 .catContainer {
