--- a/examStyle.css
+++ b/examStyle.css
@@ -23,12 +23,7 @@ main {
 }
 
 .quizContainer {
-    background-color: white;
-    border-radius: 15px;
-    overflow: hidden;
-    max-width: 100%;
-    box-shadow: 0 0 5px rgba(0,0,0,1);
-    margin: auto;
+    
 }
 
 .quizHeader {
@@ -36,12 +31,17 @@ main {
     margin-bottom: 1rem;
     background-color: #2980b9;
     color: white;
-    border-radius: 20px;
+    border-radius: 15px;
 }
 
 ul {
     list-style-type: none;
     padding: 1rem;
+    background-color: white;
+    border-radius: 15px;
+    max-width: 100%;
+    border: 8px solid gray;
+    margin-bottom: 1rem;
 }
 
 ul li {
@@ -55,13 +55,13 @@ ul li label {
 
 #submit {
     background-color: #3498db;
+    border-radius: 15px;
     display: block;
     color: white;
     width: 100%;
     padding: 1rem;
     font-size: 20px;
     border: none;
-    border-radius: 0;
 }
 
 #submit:hover {
