--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main {
     margin: auto;
 }
 
-.quizHeader {
+#quizHeader {
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(117,183,255,1) 100%);
     padding: 1rem;
