--- a/style.css
+++ b/style.css
@@ -46,8 +46,18 @@ main {
     text-align: left;
 }
 
+#jumpToQuiz p {
+    margin: 0;
+}
+
+#notice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #quizHeader {
-    padding: 2rem;
+    padding: 0.5rem;
     margin-bottom: 1rem;
     background-color: #2980b9;
     color: white;
@@ -62,7 +72,8 @@ main {
     border-radius: 15px;
     max-width: 100%;
     border: 8px solid gray;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
+    font-size: 20px;
 }
 
 ul {
@@ -122,10 +133,6 @@ h2, h3 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-p {
-    margin: 0;
-}
-
 header {
     font-size: 20px;
     background-color: #f39c12;
@@ -174,7 +181,7 @@ a, a:visited {
     color: black;
 }
 
-img {
+footer img {
     width: 50px;
     border-radius: 25px;
 }
