--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ main {
     padding: 2rem;
 }
 
+main > * {
+    margin-bottom: 2rem;
+}
+
 .hide {
     display: none;
 }
@@ -31,7 +35,17 @@ main {
     margin-bottom: 2rem;
 }
 
-#welcomTitle {
+#topicBox {
+    background: rgb(231,76,60);
+    background: linear-gradient(90deg, rgba(231,76,60,1) 0%, rgba(94,52,52,1) 100%);
+    padding: 1rem 2rem;
+    border-radius: 15px;
+    font-size: 20px;
+    margin-bottom: 2rem;
+    color: white;
+}
+
+.welcomTitle {
     text-align: left;
     font-size: 50px;
     text-shadow: 3px 3px 5px rgba(0,0,0,0.2);
@@ -72,7 +86,7 @@ main {
     border-radius: 15px;
     max-width: 100%;
     border: 8px solid gray;
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
     font-size: 20px;
 }
 
@@ -105,8 +119,8 @@ input:hover {
 }
 
 input:checked {
-    background-color: green;
-    border-color: green;
+    background-color: rgb(46, 204, 113);
+    border-color: rgb(46, 204, 113);
 }
 
 #submit {
@@ -146,11 +160,6 @@ header {
     margin: 0;
 }
 
-header > * {
-    margin: 0 20px;
-    /* padding: 10px; */
-}
-
 footer {
     background-color: rgba(0,0,0,0.9);
     color: white;
@@ -167,18 +176,23 @@ button {
     font-family: inherit;
 }
 
-a:hover {
+.topLink:hover {
     background-color: rgba(0,0,0,0.3);
 }
 
-a, a:visited {
+.topLink, a:visited {
     background: none;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     padding: 10px;
+    margin-left: 30px;
     text-decoration: none;
     color: black;
+}
+
+a {
+    text-decoration: none;
 }
 
 footer img {
@@ -186,12 +200,8 @@ footer img {
     border-radius: 25px;
 }
 
-#imgLink:hover {
-    background-color: rgba(0,0,0,0);
-}
-
 .category {
-    background-color: chartreuse;
+    border-radius: 10px;
     width: 100%;
     height: 70px;
     margin: 20px 0;
