--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ footer img {
     border-radius: 10px;
     width: 100%;
     min-height: 6vh;
-    margin: 2vh 0;
+    margin: 2% 0;
     padding-left: 2vw;
     text-align: left;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
