--- a/style.css
+++ b/style.css
@@ -240,11 +240,13 @@ footer img {
   display: flex;
   justify-content: center;
   align-items: inherit;
-  min-height: 64px;
+  /* min-height: 64px; */
+  padding: 8px 0;
   margin-left: 1vw;
   /* font-size: 50px; */
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: white;
+  row-gap: 32px;
 }
 
 .quizDetails {
